# Orangehrm

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  project.toml  pyproject.toml
actions/: common_actions.py  dashboard_functions_actions.py  leave_actions.py  login_actions.py  time_actions.py
configs/: __init__.py  env_config.py  project_config.py
data/: test_data.json
helpers/: data_reader.py  logger.py
page_objects/: base_page.py  common_page.py  dashboard_functions_page.py  leave_page.py  login_page.py  time_page.py
playwright_python_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python programs/: 1_reverse.py  2_count_a.py  3_count_vovel.py  4_palindrome.py  5_duplicates.py  6_get_input.py  7_longest_word.py  8_temp_count.py  9_duplicate.py  test.py
scripts/: check_line_limit.py
tests/: dashboard_functions_test.py  leave_management_test.py  test_login.py  time_test.py
